# pyarti

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wheels.sh  pyproject.toml  requirements-dev.txt  setup.py
docs/: api.rst  conf.py  index.rst
pyarti/: __init__.py  __main__.py  pyarti.pyi
src/: lib.rs
tests/: test_proxy.py
